2007-11-9 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  app_generators/rucola/templates/test/controllers/test_application_controller.rb,
	  app_generators/rucola/templates/test/test_helper.rb,
	  config/hoe.rb,
	  lib/rucola/tasks/main.rake,
	  lib/rucola/test_helper.rb,
	  rucola_generators/controller/templates/test_controller_template.rb.erb,
	  rucola_generators/document_model/templates/test_document_model_template.rb.erb,
	  rucola_generators/window_controller/templates/test_window_controller_template.rb.erb:

	- Added useful skeleton tests using test/spec and mocha.
	- Added a few more test helpers which provide a shortcut for getting ivars (ib_outlets).
	- The rake test task will now print with the -rr pretty test/spec output.

2007-11-9 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/autotest/fail.png,
	  lib/autotest/growl_images.rb,
	  lib/autotest/pass.png,
	  lib/autotest/sound.rb:

	- Added autotest sound plugin, original idea from: Jeremy Seitz.
	- Added autotest images plugin, copyright: John Nunemaker.

2007-11-8 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  lib/autotest,
	  lib/autotest/discover.rb,
	  lib/autotest/rucola.rb,
	  lib/rucola/rucola_support/initialize_hooks.rb:

	- Added the code to make autotest play nice with a rucola app.
	- The initialize_hooks will now call #after_init on an instance if it exists.
	  This is so that #init doesn't have to be overriden to setup defaults etc.
	- Updated TODO.

2007-11-5 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/tasks/xcode.rake,
	  app_generators/rucola/rucola_generator.rb,
	  rucola_generators/controller/controller_generator.rb,
	  rucola_generators/document_model/document_model_generator.rb,
	  rucola_generators/window_controller/window_controller_generator.rb,
	  test/test_document_model_generator.rb:

	- Modified xcode:build rake task to do xcodebuild everytime.